--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,6 @@ langchain_core
 langchain_huggingface
 langchain_text_splitters
 python-dotenv
-langchain_text_splitters
-openai
-tiktoken
 qdrant-client
 pymupdf
+faiss-cpu
