--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-chainlit
-langchain-openai
+chainlit==0.7.700
 langchain
 langchain_community
 langchain_core
@@ -7,5 +6,19 @@ langchain_huggingface
 langchain_text_splitters
 python-dotenv
 qdrant-client
-pymupdf
 faiss-cpu
+pymupdf
+langchain-openai
+
+
+#chainlit==0.7.700
+#langchain==0.2.5
+#langchain_community==0.2.5
+#langchain_core==0.2.9
+#langchain_huggingface==0.0.3
+#langchain_text_splitters==0.2.1
+#python-dotenv==1.0.1
+#qdrant-client
+#faiss-cpu
+#pymupdf
+#langchain-openai
